--- a/index.html
+++ b/index.html
@@ -1,14 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prueba Proyecto JS</title>
-    <script src="./prueba.js"></script>
-</head> 
+    <title>AIMÉ</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="./js/carrito.js">
+    <link rel="stylesheet" href="./js/menu.js">
+    <link rel="stylesheet" href="./js/principal.js">
+    <link rel="stylesheet" href="./js/productos.js">
+
+</head>
 <body>
-    <h1>Prueba JS</h1>
-    <button onclick="saludar()">Saludo Bienvenida</button>
-    <button onclick="agregarAlCarrito()">Agregar al Carrito</button>
-    <button onclick="verCarrito()">Ver Carrito</button>
-</html>
+
+    <div class="wrapper">
+        <header class="header-mobile">
+            <h1 class="logo">AIMÉ ONLINE</h1>
+            <button class="open-menu" id="open-menu">
+                <i class="bi bi-list"></i>
+            </button>
+        </header>
+        <aside>
+            <button class="close-menu" id="close-menu">
+                <i class="bi bi-x"></i>
+            </button>
+            <header>
+                <h1 class="logo">AimÉ</h1>
+            </header>
+            <nav>
+                <ul class="menu">
+                    <li>
+                        <button id="todos" class="boton-menu boton-categoria active"><i class="bi bi-hand-index-thumb-fill"></i> Todos los productos</button>
+                    </li>
+                    <li>
+                        <button id="arrastre" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Arrastre</button>
+                    </li>
+                    <li>
+                        <button id="disfraces" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Disfraces</button>
+                    </li>
+                    <li>
+                        <button id="herramientas" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Herramientas</button>
+                    </li>
+                    <li>
+                        <a class="boton-menu boton-carrito" href="./html/carrito.html">
+                            
+                            <i class="bi bi-cart-fill"></i> Carrito <span id="numerito" class="numerito">0</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+            <footer>
+                <p class="texto-footer">Aimé - Shop Online - 2023</p>
+            </footer>
+        </aside>
